[gd_scene format=3 uid="uid://7d1fgk61jwjb"]

[ext_resource type="Script" uid="uid://cbt4np2cdc2xb" path="res://ui/dialogue box/dialogue_box.gd" id="1_dqeaf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q4x8y"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="Animation" id="Animation_u5qi3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DialogueBoxMargin:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_5ck8w"]
resource_name = "hide"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DialogueBoxMargin:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_dqeaf"]
resource_name = "show_up"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DialogueBoxMargin:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_u5qi3"]
_data = {
&"RESET": SubResource("Animation_u5qi3"),
&"hide": SubResource("Animation_5ck8w"),
&"show_up": SubResource("Animation_dqeaf")
}

[node name="DialogueBox" type="Control" unique_id=2113095648]
texture_filter = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dqeaf")

[node name="DialogueBoxMargin" type="MarginContainer" parent="." unique_id=1808215171]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 464

[node name="Background" type="Panel" parent="DialogueBoxMargin" unique_id=951330305]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_q4x8y")

[node name="DialogueMargin" type="MarginContainer" parent="DialogueBoxMargin/Background" unique_id=437575300]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="DialogueBoxMargin/Background/DialogueMargin" unique_id=1075649288]
layout_mode = 2
theme_override_constants/separation = 8

[node name="TalkerNameLabel" type="Label" parent="DialogueBoxMargin/Background/DialogueMargin/VBoxContainer" unique_id=457040336]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 18
horizontal_alignment = 1
vertical_alignment = 1

[node name="HLine" type="ColorRect" parent="DialogueBoxMargin/Background/DialogueMargin/VBoxContainer" unique_id=267572932]
custom_minimum_size = Vector2(0, 1)
layout_mode = 2

[node name="DialogueTextContainer" type="ScrollContainer" parent="DialogueBoxMargin/Background/DialogueMargin/VBoxContainer" unique_id=1205513219]
layout_mode = 2
size_flags_vertical = 3
vertical_scroll_mode = 3

[node name="DialogueTextLabel" type="Label" parent="DialogueBoxMargin/Background/DialogueMargin/VBoxContainer/DialogueTextContainer" unique_id=1670736883]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 86)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/line_spacing = 5
horizontal_alignment = 3
autowrap_mode = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=1112908249]
libraries/ = SubResource("AnimationLibrary_u5qi3")
